# QtLabelTools

./: CMakeLists.txt  canvasscene.cpp  canvasscene.h  canvasview.cpp  canvasview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygonitem.cpp  polygonitem.h  rectangleitem.cpp  rectangleitem.h
